add sample get detail user
